# jira-mcp-server

./: .dockerignore  .gitignore  .mcp.json  DOCKER_RUN.md  Dockerfile  EXTERNAL_CONSUMERS.md  LOCAL_ENVIRONMENTS.md  PYTHON_MIGRATION_PLAN.md  README.md  tmp-description.md
config/: app.yaml.example
jira-client/: pyproject.toml
jira-client/src/jira_client/: __init__.py  client.py  exceptions.py  models.py
jira-mcp-server/: pyproject.toml  requirements-dev.txt  run_api.py  run_mcp_http.py
jira-mcp-server/src/jira_mcp/: __init__.py  __main__.py  api.py  launch.py  mcp_server.py  runtime.py
jira-readonly-service/: pyproject.toml
jira-readonly-service/src/jira_readonly_service/: __init__.py  config.py  dto.py  exceptions.py  secrets.py  service.py
jira-write-service/: pyproject.toml
jira-write-service/src/jira_write_service/: __init__.py  dto.py  markdown_adf.py  service.py
scripts/: run_api.sh  run_mcp.sh
secrets/: jira.yaml.example
