[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-client"
version = "0.1.0"
description = "Клиент для работы с Jira REST API"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27", "pydantic>=2.7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
