[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-readonly-service"
version = "0.1.0"
description = "Read-only сервис для Jira"
requires-python = ">=3.9"
dependencies = ["jira-client", "pydantic>=2.7", "PyYAML>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
