[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-write-service"
version = "0.1.0"
description = "Write use case слой для Jira: создание задач, комментарии и обновление полей"
requires-python = ">=3.10"
dependencies = [
    "jira-client",
    "jira-readonly-service",
    "Markdown>=3.7",
    "pydantic>=2.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
